--- a/dashboard/dashboard/elements/triage-dialog.html
+++ b/dashboard/dashboard/elements/triage-dialog.html
@@ -117,8 +117,10 @@ on an alert, or clicks on a "triage" button on the alerts page. It allows the
 
     <div id="toasts" hidden>
       <div id="jobsubmitted">
-        Bug <a href="http://crbug.com/{{lastSubmittedBugId}}"
-               target="_blank">{{lastSubmittedBugId}}</a> created/updated.
+        Bug <a href="http://crbug.com/{{lastSubmittedProjectId}}/{{lastSubmittedBugId}}"
+               target="_blank">
+               {{lastSubmittedProjectId}}:{{lastSubmittedBugId}}
+            </a> created/updated.
         <template is="dom-if" if="{{!!lastSubmittedTryJobId}}">
           Bisect job <a href="{{lastSubmittedTryJobUrl}}"
                         target="_blank">{{lastSubmittedTryJobId}}</a> started.
@@ -150,6 +152,10 @@ Polymer({
     lastSubmittedBugId: {
       type: Number,
       value: 0
+    },
+    lastSubmittedProjectId: {
+      type: String,
+      value: ''
     },
     lastSubmittedTryJobId: {
       type: Number,
@@ -214,6 +220,7 @@ Polymer({
     */
   showCreatedBugResult(data) {
     this.lastSubmittedBugId = data.bug_id;
+    this.lastSubmittedProjectId = data.project_id;
     this.lastSubmittedTryJobId = data.issue_id;
     this.lastSubmittedTryJobUrl = data.issue_url;
     this.lastSubmittedTryJobError = data.bisect_error;
