--- a/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
+++ b/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
@@ -35,8 +35,8 @@ found in the LICENSE file.
     <ul>
       <template is="dom-if" if="[[job.bug_id]]">
         <li>
-          <a href="https://crbug.com/[[job.bug_id]]" target="_blank">
-            Issue [[job.bug_id]]
+          <a href="https://crbug.com/[[job.arguments.get('project', 'chromium')]][[job.bug_id]]" target="_blank">
+            Issue [[job.arguments.get('project', 'chromium')]]:[[job.bug_id]]
           </a>
       </template>
       <li>
